# ptype-physical

./: .gitignore  README.md  environment.yml  full_rap_apply.py  mping_initial_xai.ipynb  ptype-rap.out  pyproject.toml  requirements.txt  setup.py
applications/: active_training.py  casper_train.sh  evaluate_mlp.py  map_reduce_launcher.ipynb  map_reduce_run.py  qsub_script_out  train_classifier_keras.py  train_classifier_ptype_keras.py  train_mlp.py
composite-soundings/: agree_disagree_plots.ipynb  analysis-env.yml  dev-dask-byprob.ipynb  dev-dask.ipynb  dev-linespec.ipynb  evidential_soundings.ipynb  map-reduce-analysis.ipynb  map_reduce_launcher.ipynb  merge_results.ipynb  multiplot_by_prob.ipynb  nb-draft_evidential_soundings.ipynb  nb-mr-analysis2.ipynb  nb-xr-map-red-analysis.ipynb  nb-xr-map-reduce.ipynb  plot-all-models.ipynb  plot-change-points.ipynb  plot-draft-disagree.ipynb  plot-evidential-drafts.ipynb  plot-evidential-final.ipynb  plot-inter-init.ipynb  plot-mean-med-quantiles.ipynb  plot-sleet-confidence.ipynb  plot-sleet.ipynb  plot-time-analysis.ipynb  plotting.ipynb  ptype_soundings.out  rap_inter_init_comparisons.ipynb  sleet-nwp-sounding-types.ipynb  sounding_utils.py  xr map reduce.ipynb  xr-post-merge-script.py  xr-postMR-merge.ipynb
config/: hyper.yml  inference.yml  inference_rt_central_winter_2023_2024_00Z.yml  inference_vaisala_NE.yml  p-type.yml  ptype.yml
notebooks/: .gitignore  CNN1d.ipynb  Evals_ConfusionMatrices.ipynb  JSON_to_Parquet_mPing.ipynb  NCAR_install.ipynb  RAP_maps.ipynb  Untitled.ipynb  baseline_eval.ipynb  conus_plots.ipynb  (+29 more)
(+152 files in other folders)
